Fixing wrapping on archive page

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -229,7 +229,7 @@
             font-weight: normal;
         }
         .post-meta {
-            display: inline-block;
+            display: block;
             width: 100px;
             margin-bottom: 0;
         }
